traefik3/3_ingressroute/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: first-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`www.bbb.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: web-svc
      port: 80
  - match: Host(`www.bbb.com`) && PathPrefix(`/app`)
    kind: Rule
    services:
    - name: app-svc
      port: app
